<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Text"
        android:text="@string/text1"/>

    <TextView
        android:id="@+id/text2"
        android:layout_below="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Text"
        android:text="@string/text2"/>

    <ImageView
        android:id="@+id/image1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text2"
        android:layout_centerHorizontal="true"
        android:src="@drawable/image1"/>

    <TextView
        android:id="@+id/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text3"
        style="@style/Text"
        android:layout_below="@+id/image1" />

    <ImageView
        android:id="@+id/image2"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/image2"
        android:layout_below="@+id/text3"
        android:layout_centerHorizontal="true"
        android:paddingTop="5dp"/>

    <TextView
        android:id="@+id/text4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text4"
        android:layout_below="@+id/image2"
        style="@style/Text"/>

    <ImageView
        android:id="@+id/image3"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:src="@drawable/image3"
        android:layout_below="@+id/text4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp" />

    <TextView
        android:id="@+id/text5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text5"
        android:layout_below="@+id/image3"
        style="@style/Text"/>

    <TextView
        android:id="@+id/text6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text6"
        android:layout_below="@+id/text5"
        style="@style/Text"/>

    <ImageView
        android:id="@+id/image4"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/image4"
        android:layout_below="@+id/text6"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/text7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text7"
        android:layout_below="@+id/image4"
        style="@style/Text"/>

    <TextView
        android:id="@+id/text8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text8"
        android:layout_below="@+id/text7"
        style="@style/Text"/>

    <ImageView
        android:id="@+id/image5"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:src="@drawable/image5"
        android:layout_below="@+id/text8"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp" />

    <TextView
        android:id="@+id/text9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text9"
        android:layout_below="@+id/image5"
        style="@style/Text"/>

    <TextView
        android:id="@+id/text10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text10"
        android:layout_below="@+id/text9"
        style="@style/Text"/>

    <ImageView
        android:id="@+id/image6"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/image6"
        android:layout_below="@+id/text10"
        android:layout_alignLeft="@+id/image2"
        android:layout_alignStart="@+id/image2" />

    <TextView
        android:id="@+id/text11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text11"
        style="@style/Text"
        android:layout_below="@+id/image6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/text12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text12"
        style="@style/Text"
        android:layout_below="@+id/text11"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
</ScrollView>